# fcp_silence_detector

./: .gitignore  README.md  detect_silence.py  main.py  place_markers.py  pyproject.toml
src/fcp_silence_detector/: cli.py  detect_silence.py  detect_text.py  fcpxml_io.py  out.txt  place_markers.py  test_detect_text.py
src/fcpxml-silence-detector/: main.py
tests/: test_detect_silence.py  test_detect_text.py
tests/fcp_silence_detector/: test___init__.py  test_cli.py  test_detect_silence.py  test_place_markers.py
