[project]
name = "fcp-silence-detector"
version = "0.0.3"
authors = [
  { name="Sugil Steve Lee", email="sugilmath@gmail.com" },
]
description = "Read FCPXML, detect silences, place Markers in FCPXML"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fcp-io>=0.0.2",
	"fcp-math>=0.0.2",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/leesugil/fcp_silence_detector"
Issues = "https://github.com/leesugil/fcp_silence_detector/issues"

[project.scripts]
fcp-detect-silence = "fcp_silence_detector.cli:main"
